# products

./: .gitignore  README.md  docker-compose.yml  env.example  pyproject.toml  requirements.txt
src/: alembic.ini  main.py  settings.py
src/alembic/: env.py
src/alembic/versions/: 54eb914f11dc_init.py
src/infrastructure/: __init__.py
src/infrastructure/repositories/: db_models.py  orders.py
src/models/: orders.py
src/routers/: main.py  orders.py  reports.py
src/services/: __init__.py  orders.py
src/utils/: db.py
